deploy/kustomize/overlays/development/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: savvy
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: savvy
          image: ghcr.io/sbaerlocher/container/savvy:dev
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "500m"
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
